# routers/router.go
@@ -3,7 +3,7 @@
  * @Author: leo
  * @Date: 2020-02-19 19:17:03
  * @LastEditors: leo
- * @LastEditTime: 2020-02-19 19:21:56
+ * @LastEditTime: 2020-02-20 19:00:58
  */
 
 package routers
@@ -46,6 +46,19 @@ func InitRouter() *gin.Engine {
 		apiv1.POST("/tags", v1.AddTag)
 		apiv1.PUT("/tags/:id", v1.EditTag)
 		apiv1.DELETE("/tags/:id", v1.DeleteTag)
+
+		// 文章路由
+
+		// 文章列表
+		apiv1.GET("/articles", v1.GetArticles)
+		// 指定文章
+		apiv1.GET("/articles/:id", v1.GetArticle)
+		// 新增文章
+		apiv1.POST("/articles", v1.AddArticle)
+		// 更新指定文章
+		apiv1.PUT("/articles/:id", v1.EditArticle)
+		// 删除指定文章
+		apiv1.DELETE("/articles/:id", v1.DeleteArticle)
 	}
 
 	// 创建不同的HTTP方法绑定到Handlers中，也支持POST、PUT、DELETE、PATCH、OPTIONS、HEAD 等常用的Restful方法
